# range2ip

./: README.md  pyproject.toml
example/: input.txt  output.txt
range2ip/: range2ip.py
