[tool.poetry]
name = "range2ip"
version = "1.0.0"
description = "Parse CIDRs and IP ranges to single IP addresses"
authors = ["Ryan Tucker"]
readme = "README.md"
classifiers = [
    "Environment :: Console",
    "Programming Language :: Python :: 3",
]

packages = [
    { include = "range2ip"}
]

[tool.poetry.scripts]
range2ip = 'range2ip.range2ip:main'

[tool.poetry.dependencies]
python = "^3.9"
ipaddress = "^1.0.23"
argparse = "^1.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
